# hatch-rust

./: .copier-answers.yaml  .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
hatch_rust/tests/: test_all.py
